変更点を再コミット

--- a/kadai_001/style.css
+++ b/kadai_001/style.css
@@ -11,6 +11,13 @@
  	color: #888;
  }
 
+ 
+ /* タイプ数が表示される領域 */
+ .type-count {
+ 	margin: 0;
+ 	color: #088;
+ }
+
 
  /* テキストが表示される領域 */
  .wrap {
